# io-lifetimes

./: COPYRIGHT  Cargo.toml  README.md  build.rs
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: main.yml
examples/: easy-conversions.rs  flexible-apis.rs  hello.rs  owning-wrapper.rs  portable-views.rs
src/: error.rs  example_ffi.rs  impls_async_std.rs  impls_fs_err.rs  impls_mio.rs  impls_os_pipe.rs  impls_socket2.rs  impls_std.rs  impls_std_views.rs  impls_tokio.rs  lib.rs  portability.rs  raw.rs  traits.rs  types.rs  unix.rs  views.rs  windows.rs
tests/: api.rs  assumptions.rs  ffi.rs  niche-optimizations.rs
