[package]
name = "io-lifetimes"
version = "0.5.1-alpha.0"
description = "A low-level I/O ownership and borrowing library"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["api", "io"]
categories = ["os", "rust-patterns"]
edition = "2018"
repository = "https://github.com/sunfishcode/io-lifetimes"
exclude = ["/.github"]

[dependencies]
# io-lifetimes only depends on libc/winapi for the ability to close
# fds/handles/sockets. The following are just optional dependencies to add
# foreign-type impls for the traits. In the future, we'll prefer to have
# crates provide their own impls; this is just a temporary measure.

# Optionally depend on async-std just to provide impls for its types for now.
#
# Enable the "unstable" feature so that we can implement traits for
# `process::ChildStdin` etc.
async-std = { version = "1.9.0", features = ["unstable"], optional = true }
# Optionally depend on tokio to implement traits for its types for now.
tokio = { version = "1.6.0", features = ["io-std", "fs", "net", "process"], optional = true }
# Optionally depend on os_pipe to implement traits for its types for now.
os_pipe = { version = "1.0.0", optional = true }
# Optionally depend on socket2 to implement traits for its types for now.
socket2 = { version = "0.4.0", optional = true }
# Optionally depend on mio to implement traits for its types for now.
mio = { version = "0.8.0", features = ["net", "os-ext"], optional = true }
# Optionally depend on fs_err to implement traits for its types for now.
fs-err = { version = "2.6.0", optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.96", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "std", "winsock2"] }

[features]
default = ["close"]
close = ["libc"]
