[package]
name = "io-lifetimes"
version = "2.0.0"
description = "A low-level I/O ownership and borrowing library"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["api", "io"]
categories = ["os", "rust-patterns"]
edition = "2021"
repository = "https://github.com/sunfishcode/io-lifetimes"
include = ["src", "build.rs", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]
rust-version = "1.63"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-abi = { version = "0.3", optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.96", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_IO",
]

[package.metadata.docs.rs]
features = ["close"]
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
default = []
close = ["libc", "hermit-abi", "windows-sys"]
